# vectordbindexing

./: Idea-1023.md  README_RoarGraph.md  RoarGraph.ipynb  exp.ipynb  flickr30k_clip.ipynb  hnsw_baseline_analysis.ipynb  hnsw_cosine.py  hnsw_cosine_norm.py  hnsw_cosine_status.py  hnsw_cosine_status_built.py  hnsw_cosine_status_high.py  hnsw_insert.ipynb  hnsw_insert_ori.ipynb  hnsw_methods_comparison.ipynb  hnsw_status.ipynb  hnsw_status_built.ipynb  hnsw_status_high.ipynb  hnsw_status_norm.ipynb  io_utils.py  roargraph_demo.py  roargraph_python.py  roargraph_quick_start.py  run_sample.py  simple_sim_hash.py  yandex.ipynb
RoarGraph/: install.md  prepare_data.sh
RoarGraph/tests/: test_build_roargraph.cpp
Text2Image/: README.md
hnsw_optimization/: CMakeLists.txt  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  __init__.py  benchmark_hnsw_vs_roargraph.py  bridge_builder.py  data_loader.py  experiment_runner.py  generate_comparison_plots.py  gt_utils.py  hnsw.cpp  hnsw.h  hnsw_baseline.py  hnsw_bindings.cpp  hnsw_with_bridges.py  hnsw_with_bridges_optimized.py  multi_entry_search.py  plot_entry_points_comparison.py  quick_test.py  rebuild.sh  requirements.txt  run_experiment.py  sample.py  setup.py  test_hnsw_opt.py  test_hnsw_optimization.ipynb
ood_graph_demo/: README.md  demo_ood_graph.ipynb  run_demo.py  step5_perturbation.py  step6_async_maintenance.py  step7_query_testing.py
